--- a/src/e_shared/addTaskModalButton/AddTaskModalButton.module.css
+++ b/src/e_shared/addTaskModalButton/AddTaskModalButton.module.css
@@ -1,4 +1,5 @@
 .btn{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,5 +8,20 @@
     padding: 4px 6px 4px 6px; 
     border-radius: 4px;
     cursor: pointer;
-    width: 165px;
+    width: 185px;
+}
+
+.close_btn{
+    position: absolute;
+    top: 4px;
+    right: 5px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: rgb(45, 44, 44);
+    font-size: 16px;
+}
+
+.display_none{
+    display: none;
 }
