--- a/src/b_widgets/Sidebar/ui/Sidebar.module.css
+++ b/src/b_widgets/Sidebar/ui/Sidebar.module.css
@@ -124,12 +124,19 @@
     justify-content: center;
 }
 
-.user button{
+.user_btn{
+    width: 40px;
+    height: 40px;
     border: none;
     outline: none;
     padding: 2px;
-    background: transparent;
+    background: rgb(219, 20, 20);
+    color: white;
     border-radius: 50%;
+}
+
+.user_btn span{
+    font-size: 22px;
 }
 
 .user img{
@@ -138,7 +145,7 @@
     border-radius: 50%;
 }
 
-.user span{
+.userName{
     font-size: 18px;
     color: black;
     font-weight: 500;
